# football-analytics-dashboard

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  streamlit_app.py
data/: processed_passing_data.csv  processed_shots.csv  shots_data.csv
football_analytics_dashboard.egg-info/: PKG-INFO  SOURCES.txt
models/: xgboost_metrics.txt  xgboost_xg_model.pkl
sample_data/: competitions.json
sample_data/events/: 1234501.json  1234502.json
sample_data/matches/43/: 999.json
src/: __init__.py  cli.py  config.py  dashboard.py  evaluate_xg.py  features_xg.py  fetch_passing_data.py  fetch_shots_data.py  fetch_statsbomb.py  mypy.ini  open_data.py  passing_network.py  preprocess_shots.py  preprocess_xG.py  requirements.txt  sitecustomize.py  train_xG_model.py  train_xg_model.py  ui.py  utils_io.py  validation.py
src/dashboard/: __init__.py  app.py  components.py  data.py  plots.py  theming.py
src/football_analytics_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/football_analytics_portfolio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test__preprocess_shots.py  test_cli.py  test_dashboard.py  test_entrypoint_import.py  test_features_xg.py  test_load_shots_smoke.py  test_passing_network.py  test_plots.py  test_session_state_figsize.py  test_smoke_validation_import.py  test_ui_helpers.py  test_validation.py
