[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-analytics-dashboard"
version = "0.1.0"
description = "xG model + passing networks + Streamlit dashboard using StatsBomb Open Data"
readme = "README.md"
authors = [{ name = "Mo" }]
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "joblib>=1.3",
  "typer>=0.12",
  "requests>=2.31",
  "tqdm>=4.66",
  "pydantic>=2.4",
  "matplotlib>=3.8",
  "plotly>=5.24",
  "streamlit>=1.37",
  "mplsoccer>=1.2.2",
  "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.6.9",
  "black>=24.8",
  "isort>=5.13",
]

# Package configuration
[tool.setuptools]
packages = ["src", "src.dashboard", "src.dashboard.pages"]

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "B", "UP"]

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203"]